force-app/main/default/objects/CampaignMember/fields/Archive_Launches__c.field-meta.xml
<CustomField>
    <fullName>Archive_Launches__c</fullName>
    <label>Archive Launches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>