force-app/main/default/objects/CampaignMember/fields/Archived_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Archived_Minutes__c</fullName>
    <label>Archived Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>