force-app/main/default/objects/CampaignMember/fields/Asked_A_Question__c.field-meta.xml
<CustomField>
    <fullName>Asked_A_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asked A Question</label>
    <type>Checkbox</type>
</CustomField>