force-app/main/default/objects/CampaignMember/fields/Attended_Archive__c.field-meta.xml
<CustomField>
    <fullName>Attended_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Archive</label>
    <type>Checkbox</type>
</CustomField>