force-app/main/default/objects/CampaignMember/fields/Attended_Live__c.field-meta.xml
<CustomField>
    <fullName>Attended_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Live</label>
    <type>Checkbox</type>
</CustomField>