force-app/main/default/objects/CampaignMember/fields/Attendee_Questions__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Questions__c</fullName>
    <label>Attendee Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>