force-app/main/default/objects/CampaignMember/fields/Attester_Email__c.field-meta.xml
<CustomField>
    <fullName>Attester_Email__c</fullName>
    <label>Attester Email</label>
    <type>Email</type>
</CustomField>