force-app/main/default/objects/CampaignMember/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <label>Engagement Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>