force-app/main/default/objects/CampaignMember/fields/First_Archive_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_Archive_Activity__c</fullName>
    <label>First Archive Activity</label>
    <type>DateTime</type>
</CustomField>