force-app/main/default/objects/CampaignMember/fields/First_Live_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_Live_Activity__c</fullName>
    <label>First Live Activity</label>
    <type>DateTime</type>
</CustomField>