force-app/main/default/objects/CampaignMember/fields/Last_Archive_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Archive_Activity__c</fullName>
    <label>Last Archive Activity</label>
    <type>DateTime</type>
</CustomField>