force-app/main/default/objects/CampaignMember/fields/Last_Live_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Live_Activity__c</fullName>
    <label>Last Live Activity</label>
    <type>DateTime</type>
</CustomField>