force-app/main/default/objects/CampaignMember/fields/Live_Launches__c.field-meta.xml
<CustomField>
    <fullName>Live_Launches__c</fullName>
    <label>Live Launches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>