force-app/main/default/objects/CampaignMember/fields/Live_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Live_Minutes__c</fullName>
    <label>Live Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>