force-app/main/default/objects/CampaignMember/fields/Number_of_Polls_Answered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Polls_Answered__c</fullName>
    <label>Number of Polls Answered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>