force-app/main/default/objects/CampaignMember/fields/Poll_10_Answer__c.field-meta.xml
<CustomField>
    <fullName>Poll_10_Answer__c</fullName>
    <label>Poll 10 Answer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>