force-app/main/default/objects/CampaignMember/fields/Poll_1_Question__c.field-meta.xml
<CustomField>
    <fullName>Poll_1_Question__c</fullName>
    <label>Poll 1 Question</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>