force-app/main/default/objects/CampaignMember/fields/Resource_1_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Resource_1_Viewed__c</fullName>
    <label>Resource 1 Viewed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>