force-app/main/default/objects/CampaignMember/fields/Resource_2_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Resource_2_Viewed__c</fullName>
    <label>Resource 2 Viewed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>