force-app/main/default/objects/CampaignMember/fields/Survey_10_Answer__c.field-meta.xml
<CustomField>
    <fullName>Survey_10_Answer__c</fullName>
    <label>Survey 10 Answer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>