force-app/main/default/objects/CampaignMember/fields/Survey_11_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_11_Question__c</fullName>
    <label>Survey 11 Question</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>