force-app/main/default/objects/CampaignMember/fields/Survey_12_Answer__c.field-meta.xml
<CustomField>
    <fullName>Survey_12_Answer__c</fullName>
    <label>Survey 12 Answer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>