force-app/main/default/objects/CampaignMember/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <label>Test Result</label>
    <type>TextArea</type>
</CustomField>