force-app/main/default/objects/CampaignMember/fields/Total_Resources_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Total_Resources_Viewed__c</fullName>
    <label>Total Resources Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>